Fix spacing and sanitize input

--- a/options.css
+++ b/options.css
@@ -1,3 +1,7 @@
+body {
+	margin-bottom: 60px;
+}
+
 .zero {
 	margin-left: 15%;
 	width: 70%;
@@ -14,8 +18,8 @@
 	border-width: 2px;
 }
 
-button.closebutton {
-	background-color: rgba(255,255,255,0.0);
+.closebutton {
+	background-color: white;
 	border-width: 0;
 }
 
